[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sound-limiter-env"
version = "1.0.0"
description = "OpenEnv-compatible sound limiter reinforcement learning environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ASTARR" },
]
dependencies = [
  "openenv-core>=0.2.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
training = [
  "numpy>=2.0.0",
  "matplotlib>=3.8.0",
  "torch>=2.3.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
